update terminology
